# gloveTrack

./: .gitignore  .gitmodules  CMakeLists.txt  GlovetrackConfig.h.in  README.md  commandLineArguments.cpp  commandLineArguments.hpp  generatedb.cpp  generatedb.hpp  global.h  gloveTrack.cpp  gloveTrack.h  gloveTrack.hpp  isolateGlove.cpp  isolateGlove.h  isolateGlove.hpp  libsAndConst.h  libsAndConst.hpp  lookupDatabase.cpp  lookupDatabase.h  lookupDatabase.hpp  manifest.cpp  manifest.hpp  mouse.cpp  mouse.h  mouse.hpp  renderer.cpp  renderer.hpp
db/evaluationSet/: manifest.json
db/searchSet/: manifest.json
db/trainingSet/: manifest.json
include/libhand/: hand_renderer.h
include/spdlog/: common.h  formatter.h  logger.h  spdlog.h
include/spdlog/details/: async_logger_impl.h  file_helper.h  format.cc  mpmc_bounded_q.h  null_mutex.h  os.h  registry.h  spdlog_impl.h
include/spdlog/sinks/: file_sinks.h  stdout_sinks.h
src/: CMakeLists.txt  commandLineArguments.cpp  generatedb.cpp  generatedb.hpp  gloveTrack.cpp  gloveTrackConfig.hpp  manifest.cpp  manifest.hpp  renderer.cpp  renderer.hpp
src/include/spdlog/: async_logger.h
src/include/spdlog/details/: async_log_helper.h  format.h  line_logger.h  log_msg.h  logger_impl.h  pattern_formatter_impl.h
src/include/spdlog/sinks/: base_sink.h  null_sink.h  ostream_sink.h  sink.h  syslog_sink.h
